examples/components/error/error-message.njk
{% from "components/form/controls/text-input.njk" import textinput as textinput %}

{{
    textinput({
        "id": "form-error",
        "name": "form-error",
        "label": "Hvad hedder dit kursus?",
        "hint": "Fx: Skriv godt",
        "errorMessage": "Giv dit kursus et navn"
    })
}}